--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -2,12 +2,9 @@ spring.application.name=ProductService
 
 server.port=8085
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+app.kafka.enabled=false
 
-#spring.datasource.url=jdbc:h2:mem:productdb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/productdb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
 #spring.datasource.username=neondb_owner
@@ -17,10 +14,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
 spring.kafka.bootstrap-servers=localhost:9092
 
