adding all changed files before testing

--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=OrderService
 # Server
 server.port=8082
 
+app.kafka.enabled=false
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
