--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=PaymentService
 
 server.port=8083
 
+app.kafka.enabled=false
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #spring.datasource.url=jdbc:h2:mem:paymentdb
