--- a/InventoryService/src/main/resources/application.properties
+++ b/InventoryService/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=InventoryService
 server.port=8084
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+app.kafka.enabled=false
 #spring.datasource.url=jdbc:h2:mem:inventorydb
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.username=sa
