updated env variables in all services

--- a/InventoryService/src/main/resources/application.properties
+++ b/InventoryService/src/main/resources/application.properties
@@ -1,30 +1,22 @@
-spring.application.name=InventoryService
+spring.application.name=${APP_NAME:InventoryService}
 
-server.port=8084
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+server.port=${SERVER_PORT:8084}
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 
-app.kafka.enabled=false
-#spring.datasource.url=jdbc:h2:mem:inventorydb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+app.kafka.enabled=${KAFKA_ENABLED:false}
 
-spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/inventorydb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
+#spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/inventorydb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
 #spring.datasource.username=neondb_owner
 #spring.datasource.password=npg_Cf7YXcWxPbD4
+spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP:localhost:9092}
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
