--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=OrderService
+spring.application.name=${APP_NAME:OrderService}
 
 # Server
-server.port=8082
+server.port=${SERVER_PORT:8082}
 
-app.kafka.enabled=false
+app.kafka.enabled=${KAFKA_ENABLED:false}
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 
 
 # H2 Database
@@ -17,21 +17,19 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 ## JPA
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/orderdb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
+#spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/orderdb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
 #spring.datasource.username=neondb_owner
 #spring.datasource.password=npg_Cf7YXcWxPbD4
+spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
 #kafka
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP:localhost:9092}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
