--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=ApiGateway
+spring.application.name=${APP_NAME:ApiGateway}
 
-server.port=8080
+server.port=${SERVER_PORT:8080}
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
