--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,19 +1,20 @@
-spring.application.name=PaymentService
+spring.application.name=${APP_NAME:PaymentService}
 
-server.port=8083
+server.port=${SERVER_PORT:8083}
 
-app.kafka.enabled=false
+app.kafka.enabled=${KAFKA_ENABLED:false}
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 
 #spring.datasource.url=jdbc:h2:mem:paymentdb
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/paymentdb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
+#spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/paymentdb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
 #spring.datasource.username=neondb_owner
 #spring.datasource.password=npg_Cf7YXcWxPbD4
+spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -22,11 +23,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP:localhost:9092}
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
