changed SERVER_PORT to PORT for render

--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=${APP_NAME:PaymentService}
 
-server.port=${SERVER_PORT:8083}
+server.port=${PORT:8083}
 
 app.kafka.enabled=${KAFKA_ENABLED:false}
 
