--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=${APP_NAME:ApiGateway}
 
-server.port=${SERVER_PORT:8080}
+server.port=${PORT:8080}
 
 # Eureka
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
