--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=${APP_NAME:EurekaServer}
 
-server.port=${SERVER_PORT:8761}
+server.port=${PORT:8761}
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
