--- a/InventoryService/src/main/resources/application.properties
+++ b/InventoryService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=${APP_NAME:InventoryService}
 
-server.port=${SERVER_PORT:8084}
+server.port=${PORT:8084}
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 
 app.kafka.enabled=${KAFKA_ENABLED:false}
