--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=${APP_NAME:OrderService}
 
 # Server
-server.port=${SERVER_PORT:8082}
+server.port=${PORT:8082}
 
 app.kafka.enabled=${KAFKA_ENABLED:false}
 
