--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=${APP_NAME:ProductService}
 
-server.port=${SERVER_PORT:8085}
+server.port=${PORT:8085}
 
 app.kafka.enabled=${KAFKA_ENABLED:false}
 
