--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=${APP_NAME:UserService}
 
-server.port=${SERVER_PORT:8081}
+server.port=${PORT:8081}
 
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 
