--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -20,3 +20,33 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.cloud.gateway=DEBUG
 
 #spring.security.oauth2.resourceserver.jwt.secret-key=hgcghccghcvjhvjvjfvjvjccjghjvjvhgchchgchgchg
+
+# -------- ProductService Route --------
+spring.cloud.gateway.routes[0].id=productservice
+spring.cloud.gateway.routes[0].uri=http://productservice:10000
+spring.cloud.gateway.routes[0].predicates[0]=Path=/productservice/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
+# -------- OrderService Route --------
+spring.cloud.gateway.routes[1].id=orderservice
+spring.cloud.gateway.routes[1].uri=http://orderservice:10000
+spring.cloud.gateway.routes[1].predicates[0]=Path=/orderservice/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+
+# -------- UserService Route --------
+spring.cloud.gateway.routes[2].id=userservice
+spring.cloud.gateway.routes[2].uri=http://userservice:10000
+spring.cloud.gateway.routes[2].predicates[0]=Path=/userservice/**
+spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
+
+# -------- PaymentService Route --------
+spring.cloud.gateway.routes[3].id=paymentservice
+spring.cloud.gateway.routes[3].uri=http://paymentservice:10000
+spring.cloud.gateway.routes[3].predicates[0]=Path=/paymentservice/**
+spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
+
+# -------- InventoryService Route --------
+spring.cloud.gateway.routes[4].id=inventoryservice
+spring.cloud.gateway.routes[4].uri=http://inventoryservice:10000
+spring.cloud.gateway.routes[4].predicates[0]=Path=/inventoryservice/**
+spring.cloud.gateway.routes[4].filters[0]=StripPrefix=1
