added eureka config in app.prop file

--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.port=${PORT:8082}
 app.kafka.enabled=${KAFKA_ENABLED:false}
 
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${PORT}
 
 
 # H2 Database
