--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.port=${PORT:8083}
 app.kafka.enabled=${KAFKA_ENABLED:false}
 
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${PORT}
 
 #spring.datasource.url=jdbc:h2:mem:paymentdb
 #spring.datasource.driver-class-name=org.h2.Driver
