--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.port=${PORT:8085}
 app.kafka.enabled=${KAFKA_ENABLED:false}
 
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${PORT}
 
 #spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/productdb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
 #spring.datasource.username=neondb_owner
