--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.port=${PORT:8080}
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${PORT}
 
 
 spring.main.allow-bean-definition-overriding=true
@@ -14,39 +16,7 @@ spring.main.web-application-type=reactive
 spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
 
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
-
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.cloud.gateway=DEBUG
 
-#spring.security.oauth2.resourceserver.jwt.secret-key=hgcghccghcvjhvjvjfvjvjccjghjvjvhgchchgchgchg
 
-# -------- ProductService Route --------
-spring.cloud.gateway.routes[0].id=productservice
-spring.cloud.gateway.routes[0].uri=http://productservice:10000
-spring.cloud.gateway.routes[0].predicates[0]=Path=/productservice/**
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
-
-# -------- OrderService Route --------
-spring.cloud.gateway.routes[1].id=orderservice
-spring.cloud.gateway.routes[1].uri=http://orderservice:10000
-spring.cloud.gateway.routes[1].predicates[0]=Path=/orderservice/**
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
-
-# -------- UserService Route --------
-spring.cloud.gateway.routes[2].id=userservice
-spring.cloud.gateway.routes[2].uri=http://userservice:10000
-spring.cloud.gateway.routes[2].predicates[0]=Path=/userservice/**
-spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
-
-# -------- PaymentService Route --------
-spring.cloud.gateway.routes[3].id=paymentservice
-spring.cloud.gateway.routes[3].uri=http://paymentservice:10000
-spring.cloud.gateway.routes[3].predicates[0]=Path=/paymentservice/**
-spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
-
-# -------- InventoryService Route --------
-spring.cloud.gateway.routes[4].id=inventoryservice
-spring.cloud.gateway.routes[4].uri=http://inventoryservice:10000
-spring.cloud.gateway.routes[4].predicates[0]=Path=/inventoryservice/**
-spring.cloud.gateway.routes[4].filters[0]=StripPrefix=1
