--- a/InventoryService/src/main/resources/application.properties
+++ b/InventoryService/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=${APP_NAME:InventoryService}
 
 server.port=${PORT:8084}
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
-
 app.kafka.enabled=${KAFKA_ENABLED:false}
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${PORT}
 
 #spring.datasource.url=jdbc:postgresql://ep-soft-cloud-ahiwm1ui-pooler.c-3.us-east-1.aws.neon.tech/inventorydb?user=neondb_owner&password=npg_Cf7YXcWxPbD4&sslmode=require&channelBinding=require
 #spring.datasource.username=neondb_owner
