--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,63 +1,22 @@
-#spring.application.name=${APP_NAME:ApiGateway}
-#
-#server.port=${PORT:8080}
-#
-## Eureka
-#eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=true
-#eureka.instance.prefer-ip-address=true
-#eureka.instance.instance-id=${spring.application.name}:${PORT}
-#
-#
-#spring.main.allow-bean-definition-overriding=true
-#spring.main.web-application-type=reactive
-#
-#
-##when true routes are ignored
-#spring.cloud.gateway.server.webflux.discovery.locator.enabled=false
-#spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
-#
-#logging.level.org.springframework.security=DEBUG
-#logging.level.org.springframework.cloud.gateway=DEBUG
-#
-#
-## =======================
-## USER SERVICE
-## =======================
-#spring.cloud.gateway.routes[0].id=user-service
-#spring.cloud.gateway.routes[0].uri=lb://USERSERVICE
-#spring.cloud.gateway.routes[0].predicates[0]=Path=/userservice/**
-#spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
-#
-## =======================
-## PRODUCT SERVICE
-## =======================
-#spring.cloud.gateway.routes[1].id=product-service
-#spring.cloud.gateway.routes[1].uri=lb://PRODUCTSERVICE
-#spring.cloud.gateway.routes[1].predicates[0]=Path=/productservice/**
-#spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
-#
-## =======================
-## ORDER SERVICE
-## =======================
-#spring.cloud.gateway.routes[2].id=order-service
-#spring.cloud.gateway.routes[2].uri=lb://ORDERSERVICE
-#spring.cloud.gateway.routes[2].predicates[0]=Path=/orderservice/**
-#spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
-#
-## =======================
-## INVENTORY SERVICE
-## =======================
-#spring.cloud.gateway.routes[3].id=inventory-service
-#spring.cloud.gateway.routes[3].uri=lb://INVENTORYSERVICE
-#spring.cloud.gateway.routes[3].predicates[0]=Path=/inventoryservice/**
-#spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
-#
-## =======================
-## PAYMENT SERVICE
-## =======================
-#spring.cloud.gateway.routes[4].id=payment-service
-#spring.cloud.gateway.routes[4].uri=lb://PAYMENTSERVICE
-#spring.cloud.gateway.routes[4].predicates[0]=Path=/paymentservice/**
-#spring.cloud.gateway.routes[4].filters[0]=StripPrefix=1
+spring.application.name=${APP_NAME:ApiGateway}
+
+server.port=${PORT:8080}
+
+# Eureka
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${PORT}
+
+
+spring.main.allow-bean-definition-overriding=true
+spring.main.web-application-type=reactive
+
+
+#when true routes are ignored
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=false
+spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.cloud.gateway=DEBUG
