added frontend base url varible to payment for redirect

--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=${APP_NAME:PaymentService}
 
 server.port=${PORT:8083}
+frontend.base-url=${FRONTEND_BASE_URL}
 
 app.kafka.enabled=${KAFKA_ENABLED:false}
 
